# StateSaver

./: .gitignore  CMakeLists.txt  Latest_gtest_results.txt  Latest_test_results.txt  main.cpp  package.xml
script/: runTests.sh  startup.sh
src/: SensorDataConfig.cpp  SensorDataConfig.hpp  StateSaver.cpp  StateSaver.hpp  main.cpp
src/StateSaverChecker/: main.cpp
test/: test_state_saver.cpp
